# mcp-scaudit

./: .dockerignore  .env.example  .gitignore  ALTERACOES.md  CHANGES_SUMMARY.md  CI_CD_SETUP.md  CLAUDE_DESKTOP_CONFIG.md  CONTRIBUTING.md  CORRECOES_DOCKER_PT.md  DOCKER.md  DOCKER_BUILD.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: ALTERACOES.md  BUILD_FIXES.md  CHANGES_SUMMARY.md  CI_CD_SETUP.md  CLAUDE_DESKTOP_CONFIG.md  CORRECOES_DOCKER_PT.md  DOCKER.md  DOCKER_BUILD.md  DOCKER_NETWORK_TIMEOUT.md  IMPLEMENTATION_SUMMARY.md  PYTHON_MIGRATION.md  QUICKSTART.md
examples/: README.md  SimpleToken.sol
farofino_mcp/: __main__.py
mcp_scaudit/: __init__.py
src/: index.ts  mcp_scaudit.py
tests/: test_server.py
