[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farofino-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for auditing smart contracts using Slither, Aderyn, and other tools"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Italo A. G." , email = "italoamorim@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "smart-contract",
    "audit",
    "security",
    "slither",
    "aderyn",
    "blockchain",
    "ethereum",
    "solidity",
    "vyper",
    "static-analysis",
    "vulnerability",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
audit = [
    "slither-analyzer>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/italoag/farofino-mcp"
Repository = "https://github.com/italoag/farofino-mcp"
Issues = "https://github.com/italoag/farofino-mcp/issues"

[project.scripts]
farofino-mcp = "farofino_mcp.__main__:run"

[tool.setuptools]
packages = ["farofino_mcp"]

[tool.setuptools.package-data]
farofino_mcp = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
